Add GitHub Markdown fetcher, fix comments, update README.md

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "EduMark",
   "version": "0.0.1",
   "main": "edumark.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,11 +12,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "git-hooks": "^1.1.10",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
     "markdown-it-container": "^4.0.0",
     "markdown-it-mark": "^4.0.0",
-    "markdown-it-toc-done-right": "^4.2.0"
+    "markdown-it-toc-done-right": "^4.2.0",
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.10"
   }
 }
