--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "main": "edumark.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js",
+    "start": "nodemon edumark.js",
+    "stop": "kill -9 $(lsof -t -i:3000)",
+    "deploy": "pm2 start edumark.js --name 'edumark'",
+    "monit": "pm2 monit",
+    "logs": "pm2 logs edumark",
+    "delete": "pm2 delete edumark",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,6 +26,7 @@
     "markdown-it-mark": "^4.0.0",
     "markdown-it-toc-done-right": "^4.2.0",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "pm2": "^6.0.13"
   }
 }
