--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "highlight.js": "^11.11.1",
+    "katex": "^0.16.25",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
     "markdown-it-container": "^4.0.0",
     "markdown-it-mark": "^4.0.0",
+    "markdown-it-texmath": "^1.0.0",
     "markdown-it-toc-done-right": "^4.2.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
